--- a/1103.html
+++ b/1103.html
@@ -5,14 +5,14 @@
     <link href="1103.css" type="text/css" rel="stylesheep">
 </head>
 <body>
-    <div id=slide class=panel>
-        <div class=one>1</div>
-        <div class=two>2</div>
-        <div class=three>3</div>
-        <div class=four>4</div>
-        <div class=five>5</div>
-        <div class=buttenLeft></div>
-        <div class=buttenRight></div>
+    <div id=slide>
+        <div class=panel>1</div>
+        <div class=panel>2</div>
+        <div class=panel>3</div>
+        <div class=panel>4</div>
+        <div class=panel>5</div>
     </div>
+    <div id="moveToRight" ontouchstart="moveToRight();"></div>
+    <div id="moveToLeft" ontouchstart="moveToLeft();"></div>
 </body>
 </html>
