--- a/1103.html
+++ b/1103.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <div id=slide>
-        <div class=panel>1</div>
-        <div class=panel>2</div>
-        <div class=panel>3</div>
-        <div class=panel>4</div>
-        <div class=panel>5</div>
+        <span class=panel>1</span>
+        <span class=panel>2</span>
+        <span class=panel>3</span>
+        <span class=panel>4</span>
+        <span class=panel>5</span>
     </div>
     <div id="moveToRight" ontouchstart="moveToRight();"></div>
     <div id="moveToLeft" ontouchstart="moveToLeft();"></div>
