--- a/1103.html
+++ b/1103.html
@@ -5,14 +5,21 @@
     <link href="1103.css" type="text/css" rel="stylesheep">
 </head>
 <body>
-    <div id=slide>
-        <span class=panel>1</span>
-        <span class=panel>2</span>
-        <span class=panel>3</span>
-        <span class=panel>4</span>
-        <span class=panel>5</span>
+    <div id="slide">
+        <span class="panel">1</span>
+        <span class="panel">2</span>
+        <span class="panel">3</span>
+        <span class="panel">4</span>
+        <span class="panel">5</span>
     </div>
-    <div id="moveToRight" ontouchstart="moveToRight();"></div>
     <div id="moveToLeft" ontouchstart="moveToLeft();"></div>
+    <div id="moveToRight" ontouchstart="moveToRight();"></div>>
+    <div id="btnGroup">
+        <div class="btn" ontouchstart="goToPanel(1);">1</div>
+        <div class="btn" ontouchstart="goToPanel(2);">2</div>
+        <div class="btn" ontouchstart="goToPanel(3);">3</div>
+        <div class="btn" ontouchstart="goToPanel(4);">4</div>
+        <div class="btn" ontouchstart="goToPanel(5);">5</div>
+    </div>
 </body>
 </html>
